--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,22 @@
+*{
+font-family: "Space Grotesk"; 
+}
+    
+body {
+margin: 0;
+}
 
+#TimerDiv{
+position: absolute; 
+background-color: white; 
+color: black;
+z-index: 1000; 
+width: 100vw;
+height: 100vh;
+font-size: 25px; 
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+gap: 10px;
+}
